// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container AboutDialog should render AboutDialog container 1`] = `
<Translate(AboutDialog)
  expanded={false}
  icon="talend-tdp-colored"
  loading={undefined}
  onHide={[Function]}
  onToggle={[Function]}
  show={undefined}
/>
`;

exports[`Container AboutDialog should render AboutDialog container while fetching items 1`] = `
<Translate(AboutDialog)
  expanded={undefined}
  icon="talend-tdp-colored"
  loading={true}
  onHide={[Function]}
  onToggle={[Function]}
  show={undefined}
/>
`;

exports[`Container AboutDialog should render AboutDialog container with a list of items 1`] = `
<Translate(AboutDialog)
  expanded={undefined}
  icon="talend-tdp-colored"
  loading={undefined}
  onHide={[Function]}
  onToggle={[Function]}
  show={undefined}
/>
`;
